# backend-rails/config/routes.rb
@@ -6,6 +6,10 @@ Rails.application.routes.draw do
       post 'auth/login', to: 'auth#login'
       post 'auth/logout', to: 'auth#logout'
       get 'auth/session', to: 'auth#show'
+      get 'admin/elections/:election_id/parties', to: 'admin/parties#index'
+      post 'admin/elections/:election_id/parties', to: 'admin/parties#create'
+      patch 'admin/elections/:election_id/parties/:id', to: 'admin/parties#update'
+      delete 'admin/elections/:election_id/parties/:id', to: 'admin/parties#destroy'
       post 'admin/elections/:election_id/contests', to: 'admin/contests#create'
       post 'admin/elections/:election_id/voting-devices', to: 'admin/voting_devices#create'
       post 'admin/rounds/:id/open', to: 'admin/rounds#open'
